Updated the build.* scripts inline with the current AS7 versions from git