@@ -23,17 +23,13 @@ REM Ignore the users classpath, cause it might mess
 REM things up
 REM ******************************************************
 
-set PWD=%~dp0
-echo %PWD%
-
-
 SETLOCAL
 
 set CLASSPATH=
 set M2_HOME=
 set MAVEN_HOME=
 
-set MAVEN_OPTS=%MAVEN_OPTS% -Xms1024m -Xmx1024m -XX:PermSize=1024m -XX:MaxPermSize=1024m
+set MAVEN_OPTS=%MAVEN_OPTS% -Xms512m
 set MVN_OPTIONS=-gs tools\maven\conf\settings.xml -Dorson.jar.location=%PWD%\ext\orson-0.5.0.jar -Demma.jar.location=%PWD%\ext\emma.jar
 
 REM ******************************************************
@@ -91,8 +87,10 @@ REM ******************************************************
 echo Calling %1 %2 %3 %4 %5 %6 %7 %8
 set GOAL=%2
 if "%GOAL%"=="" set GOAL=install
-call %1 %MVN_OPTIONS% %GOAL% %3 %4 %5 %6 %7 %8
+
+call %1 %GOAL% %3 %4 %5 %6 %7 %8
 
 :end
 
 if "%NOPAUSE%" == "" pause
+
